compiler/src/test/resources/golden/errors/ctorvalue_arity.dawn
type Pair = | Pair(a: Int, b: Int)

pub fn main() -> Unit !io = {
  let ys = map([1, 2], Pair)
  println("x")
}
