compiler/src/test/resources/golden/errors/ctorvalue_arity.err
error: cannot infer type parameter(s) U for `map`
  --> ctorvalue_arity.dawn:4:12
  |
4 |   let ys = map([1, 2], Pair)
  |            ^^^^^^^^^^^^^^^^^
  = hint: add a type annotation at the use site
error: `Pair` takes 2 field(s), but fn(Int) -> U !e is expected
  --> ctorvalue_arity.dawn:4:24
  |
4 |   let ys = map([1, 2], Pair)
  |                        ^^^^
  = hint: constructor: Pair(a: Int, b: Int): Pair
